[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
octocrab = "0.49.5"
poise = "0.6.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
git2 = "0.20.4"
nucleo-matcher = "0.3.1"
walkdir = "2.5.0" 
